NIHVIVO-2740: This fix layout issues in Chrome for PC and Mac

--- a/webapp/web/css/individual/individual.css
+++ b/webapp/web/css/individual/individual.css
@@ -4,7 +4,6 @@
 #admin {
     font-size: .8em;
     padding-top: 0;
-    padding-right: 40px;
 }
 #admin h3 {
     display: inline-block;
@@ -210,7 +209,7 @@ h1.fn .preferred-title {
 }
 /* <------ INDIVIDUAL VISUALIZATION */
 #visualization {
-    padding: 0 0 20px 30px;
+    padding: 0 0 20px 20px;
     padding-top: 0;
     float: right;
     background-color: #fff;
